Fix card description overflow on small screen

--- a/src/card.css
+++ b/src/card.css
@@ -125,6 +125,7 @@
 .card .description {
 	color: var(--on-surface-color);
 	background-color: var(--surface-container-color);
+	overflow-wrap: anywhere;
 }
 
 .card:not(.open) .description {
